--- a/public/depart.html
+++ b/public/depart.html
@@ -10,252 +10,142 @@
   *{box-sizing:border-box}
   body{margin:0;background:var(--bg);font-family:"Noto Sans KR",sans-serif}
   header{background:var(--brand);color:#fff;text-align:center;padding:12px;font-weight:900}
-  .wrap{max-width:520px;margin:0 auto;padding:12px}
+  .wrap{max-width:480px;margin:0 auto;padding:12px}
   .card{background:var(--card);border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08);padding:14px;margin-bottom:12px}
-  .btn{display:inline-flex;align-items:center;justify-content:center;gap:6px;border:none;border-radius:10px;padding:12px 14px;font-weight:800;color:#fff;background:var(--brand);cursor:pointer}
-  .btn.full{width:100%}
-  .btn.gray{background:#6b7280}
-  .btn.green{background:#10b981}
-  .btn.orange{background:#f59e0b}
-  .stack{display:flex;gap:8px}
-  .stack.col{flex-direction:column}
-  input[type="text"],input[type="number"]{flex:1;padding:12px;border:1px solid #e5e7eb;border-radius:10px;font-size:15px}
+  .btn{display:inline-flex;align-items:center;justify-content:center;gap:6px;border:none;border-radius:10px;padding:12px 14px;
+       font-weight:800;color:#fff;background:var(--brand);cursor:pointer}
+  .btn.full{width:100%}.btn.gray{background:#6b7280}.btn.green{background:#10b981}.btn.orange{background:#f59e0b}
+  .stack{display:flex;gap:8px;flex-wrap:wrap}
+  input[type="text"]{flex:1;padding:12px;border:1px solid #e5e7eb;border-radius:10px;font-size:15px}
   video{width:100%;border-radius:12px;background:#000}
-  .kpi{display:flex;justify-content:space-between;margin:8px 0 2px;font-weight:900}
   .muted{color:var(--muted);font-size:.9rem;margin:6px 0}
-  .pill{display:inline-block;background:#eef4ff;color:#3563ff;border-radius:999px;padding:6px 10px;margin:4px 6px 0 0;font-size:14px}
   .list{max-height:180px;overflow:auto;border:1px solid #eef2f7;border-radius:10px;padding:8px}
-  .cards{max-height:480px;overflow:auto;border:1px solid #eef2f7;border-radius:12px;padding:8px}
+  .cards{max-height:420px;overflow:auto;border:1px solid #eef2f7;border-radius:12px;padding:8px}
   .citem{border:1px solid #e5e7eb;border-radius:12px;padding:10px;margin-bottom:8px}
   .crow{display:flex;justify-content:space-between;gap:8px;align-items:center}
-  .order{min-width:36px;height:36px;border-radius:50%;background:#007bff;color:#fff;display:flex;align-items:center;justify-content:center;font-weight:900}
+  .order{min-width:36px;height:36px;border-radius:50%;background:#007bff;color:#fff;display:flex;align-items:center;
+         justify-content:center;font-weight:900}
   .addr{font-size:.95rem}
-  .tags{display:flex;flex-wrap:wrap;gap:6px;margin-top:6px}
-  .tag{background:#f1f5f9;border:1px solid #e2e8f0;border-radius:999px;padding:2px 8px;font-size:12px}
-  .danger{color:#ef4444}
 </style>
 </head>
 <body>
-<header>🚚 배송출발 (The Listen)</header>
+<header>🚚 배송출발 (The Listen 운송장 분리형)</header>
 <div class="wrap">
 
-  <!-- 스캔/수기 입력 -->
+  <!-- 스캔 / 수기 입력 -->
   <div class="card">
-    <div class="stack col">
-      <video id="preview" playsinline muted></video>
-      <div class="stack">
-        <button class="btn" id="btnStart">📸 후면카메라</button>
-        <input id="scanInput" type="text" inputmode="numeric" placeholder="운송장 번호 수기 입력 또는 스캐너 Enter" />
-        <button class="btn green" id="btnAdd">추가</button>
-      </div>
-      <div class="muted">1박스=1운송장. 같은 <b>이름/전화/상세주소</b>는 <b>한 고객카드</b>로 묶이고, 운송장은 배열로 합쳐집니다.</div>
+    <video id="preview" playsinline muted></video>
+    <div class="stack">
+      <button class="btn" id="btnStart">📸 후면카메라</button>
+      <input id="scanInput" type="text" placeholder="운송장 입력 또는 스캐너 입력" />
+      <button class="btn green" id="btnAdd">추가</button>
     </div>
+    <div class="muted">후면 카메라 스캔 + HID(블루투스/유선) 입력 지원</div>
   </div>
 
-  <!-- 스캔 목록 -->
+  <!-- 고객 카드 목록 -->
   <div class="card">
-    <div class="kpi"><span>스캔 수량</span><span id="scanCount">0</span></div>
-    <div class="list" id="scanList" aria-label="스캔 목록"></div>
-  </div>
-
-  <!-- 고객카드 (묶음) -->
-  <div class="card">
-    <div class="kpi"><span>고객 카드</span><span id="custCount">0</span></div>
-    <div class="stack" style="gap:6px;margin-bottom:8px;">
-      <button class="btn orange full" id="btnOptimize">🧭 최적 경로(순번 부여)</button>
+    <div class="stack" style="margin-bottom:8px;">
+      <button class="btn orange full" id="btnOptimize">🧭 경로 최적화</button>
       <button class="btn full" id="btnDispatch">🚀 출발 전송 → 지도</button>
-      <button class="btn gray full" id="btnClear">🧹 초기화(테스트용)</button>
     </div>
     <div class="cards" id="cards"></div>
-    <div class="muted">· 박스수량=운송장 배열 길이. · 고가품은 <span class="danger">붉은 표시</span>로 강조(샘플 규칙).</div>
   </div>
-
 </div>
 
 <script>
-/** 상태 **/
-const reader = new ZXing.BrowserMultiFormatReader();
-const video  = document.getElementById("preview");
-const scanListDiv = document.getElementById("scanList");
-const cardsDiv    = document.getElementById("cards");
-let scanList = JSON.parse(localStorage.getItem("scanList")||"[]");
+/* ====== 기본 변수 ====== */
+const reader=new ZXing.BrowserMultiFormatReader();
+const video=document.getElementById("preview");
+let customers=[];
 
-/** 고객 객체 스키마 (합쳐진 형태)
- * {
- *   id: 'CUST-해시', name, phone, address, lat, lng,
- *   waybills: [ 'WB-1', 'WB-2', ... ],
- *   products: { 'WB-1': {sender:'', item:'', highValue:false}, ...},
- *   order: null|number
- * }
- */
-let customers = JSON.parse(localStorage.getItem("dep_customers")||"[]");
-
-/** 스캔 UI **/
-function renderScan(){
-  scanListDiv.innerHTML = scanList.map(s=>`<span class="pill">${s}</span>`).join('') || '<div class="muted">스캔 내역이 없습니다.</div>';
-  document.getElementById('scanCount').textContent = scanList.length;
-  localStorage.setItem("scanList", JSON.stringify(scanList));
+/* ====== 임시 테스트용 랜덤 고객 (주소 기반) ====== */
+function randomCustomer(code){
+  const baseLat=37.3795+(Math.random()-0.5)*0.01;
+  const baseLng=126.806+(Math.random()-0.5)*0.01;
+  const dong=100+Math.floor(Math.random()*20);
+  const ho=100+Math.floor(Math.random()*50);
+  return {
+    id:`${code}`,
+    name:`조남고객${dong}`,
+    phone:`010-33${dong}-${ho}22`,
+    address:`경기도 시흥시 조남동 ${dong}동 ${ho}호`,
+    lat:baseLat,lng:baseLng,
+    waybills:[code]
+  };
 }
-document.getElementById('btnStart').onclick = ()=>{
-  reader.decodeFromVideoDevice(null, video, (res,err)=>{ if(res){ onScan(res.text); }});
+
+/* ====== 스캔 / 입력 ====== */
+document.getElementById('btnStart').onclick=()=>{
+  reader.decodeFromVideoDevice(null,video,(res,err)=>{
+    if(res){ addWaybill(res.text); }
+  });
 };
-document.getElementById('btnAdd').onclick = ()=>{
-  const v = scanInput.value.trim(); if(!v) return;
-  onScan(v); scanInput.value='';
+document.getElementById('btnAdd').onclick=()=>{
+  const v=document.getElementById('scanInput').value.trim();
+  if(v){ addWaybill(v); document.getElementById('scanInput').value=''; }
 };
-scanInput.addEventListener('keydown',e=>{ if(e.key==='Enter'){ document.getElementById('btnAdd').click(); }});
+document.getElementById('scanInput').addEventListener('keydown',e=>{
+  if(e.key==='Enter'){document.getElementById('btnAdd').click();}
+});
 
-/** 고객 50명 샘플 시드 (처음 비어있을 때만) **/
-function seedIfEmpty(){
-  if(customers.length) return;
-  const baseLat=37.3795, baseLng=126.8060;
-  for(let i=1;i<=10;i++){
-    const lat = baseLat+(Math.random()-0.5)*0.01;
-    const lng = baseLng+(Math.random()-0.5)*0.01;
-    const name = `조남고객${i}`;
-    const phone = `010-${String(1000+i).padStart(4,'0')}-${String(2000+i).padStart(4,'0')}`;
-    const dong = 100 + (i%10);
-    const ho   = 100 + i;
-    const address = `경기도 시흥시 조남동 ${dong}동 ${ho}호`;
-    const wb = `WB-${dong}-${ho}`;
-    customers.push({
-      id: `CUST-${dong}-${ho}`,
-      name, phone, address, lat, lng,
-      waybills: [wb],
-      products: { [wb]: { sender:'테스트화주', item:`상품${i}`, highValue: (i%7===0) }},
-      order: null
-    });
+/* ====== 운송장 추가 및 병합 ====== */
+function addWaybill(code){
+  // 새 고객 생성
+  const c=randomCustomer(code);
+
+  // 동일 고객(주소/전화/이름 매칭) 존재 확인
+  const exist=customers.find(x=>x.phone===c.phone && x.address===c.address && x.name===c.name);
+  if(exist){
+    if(!exist.waybills.includes(code)) exist.waybills.push(code);
+  }else{
+    customers.push(c);
   }
+  renderCards();
 }
 
-/** 동일 고객(이름/전화/주소) 매칭 후 병합 **/
-function upsertCustomerByKey({waybill, name, phone, address, lat, lng, product}){
-  const key = `${name}__${phone}__${address}`;
-  let hit = customers.find(c=>`${c.name}__${c.phone}__${c.address}`===key);
-  if(!hit){
-    hit = {
-      id: `CUST-${Date.now()}-${Math.random().toString(36).slice(2,7)}`,
-      name, phone, address, lat, lng,
-      waybills: [],
-      products: {},
-      order: null
-    };
-    customers.push(hit);
-  }
-  if(!hit.waybills.includes(waybill)){
-    hit.waybills.push(waybill);
-    hit.products[waybill] = product || {sender:'미상', item:'일반상품', highValue:false};
-  }
-}
-
-/** 스캔 처리 → 고객카드 활성화(묶음) **/
-function onScan(code){
-  scanList.unshift(code);
-  renderScan();
-
-  // 실제에선 운송장으로 고객/상품정보를 조회합니다. (여기선 데모로 랜덤 생성)
-  const mock = makeMockByWaybill(code);
-  upsertCustomerByKey(mock);
-
-  renderCards(mock.customerId); // 강조 스크롤용 ID가 있다면 사용
-  localStorage.setItem("dep_customers", JSON.stringify(customers));
-}
-
-/** 운송장 → 데모 고객/상품 생성기 (실서비스에선 API 연동) **/
-function makeMockByWaybill(wb){
-  const baseLat=37.3795, baseLng=126.8060;
-  const lat = baseLat+(Math.random()-0.5)*0.01;
-  const lng = baseLng+(Math.random()-0.5)*0.01;
-  const name = `조남고객${Math.floor(Math.random()*8)+1}`;
-  const phone = `010-${Math.floor(1000+Math.random()*9000)}-${Math.floor(1000+Math.random()*9000)}`;
-  const dong = 100 + Math.floor(Math.random()*20);
-  const ho   = 100 + Math.floor(Math.random()*500);
-  const address = `경기도 시흥시 조남동 ${dong}동 ${ho}호`;
-  const product = { sender:'샘플화주', item:`샘플상품-${wb.slice(-3)}`, highValue: (wb.length%5===0) };
-  return { waybill: wb, name, phone, address, lat, lng, product, customerId:`CUST-${dong}-${ho}` };
-}
-
-/** 고객 카드 렌더 (묶음) **/
-function renderCards(focusId=null){
-  document.getElementById('custCount').textContent = customers.length;
-  cardsDiv.innerHTML = customers.map(c=>{
-    const count = c.waybills.length;
-    const hv = Object.values(c.products).some(p=>p?.highValue);
-    return `
-      <div class="citem" id="row-${c.id}">
-        <div class="crow">
-          <div class="order">${c.order??'-'}</div>
-          <div style="flex:1">
-            <div><b>${c.name}</b> · ${c.phone}</div>
-            <div class="addr">${c.address}</div>
-            <div class="tags">
-              <span class="tag">박스 ${count}개</span>
-              ${hv?'<span class="tag danger">고가품 포함</span>':''}
-              <span class="tag">운송장: ${c.waybills.slice(-3).join(', ')}${c.waybills.length>3?' 외':''}</span>
-            </div>
-          </div>
+/* ====== 카드 렌더링 ====== */
+function renderCards(){
+  const cards=document.getElementById('cards');
+  cards.innerHTML=customers.map((c,i)=>`
+    <div class="citem">
+      <div class="crow">
+        <div class="order">${i+1}</div>
+        <div style="flex:1">
+          <div><b>${c.name}</b> · <span class="addr">${c.address}</span></div>
+          <div>📞 <a href="tel:${c.phone}" style="color:#007bff;text-decoration:none;">${c.phone}</a></div>
+          <div>📦 박스 ${c.waybills.length}개</div>
+          <div class="muted">운송장: ${c.waybills.join(', ')}</div>
         </div>
       </div>
-    `;
-  }).join('');
-  if(focusId){
-    const el=document.getElementById(`row-${focusId}`);
-    if(el) el.scrollIntoView({behavior:'smooth',block:'center'});
-  }
+    </div>
+  `).join('');
 }
 
-/** 최적경로(순번) — 현재 위치 기준 근접정렬 **/
+/* ====== GPS 기반 경로 최적화 ====== */
 function optimize(){
-  if(!navigator.geolocation) return alert('GPS 권한을 허용해 주세요.');
+  if(!navigator.geolocation) return alert('GPS 권한을 허용해주세요.');
   navigator.geolocation.getCurrentPosition(pos=>{
-    const [a,b]=[pos.coords.latitude,pos.coords.longitude];
-    const dist=(x1,y1)=>Math.hypot(x1-a,y1-b);
-    customers.sort((x,y)=>dist(x.lat,x.lng)-dist(y.lat,y.lng));
-    customers.forEach((c,i)=>c.order=i+1);
-    localStorage.setItem('dep_customers', JSON.stringify(customers));
-    alert('🧭 GPS 기준으로 배송 순서(1~N)가 부여되었습니다.');
+    const {latitude,longitude}=pos.coords;
+    const dist=(a,b)=>Math.hypot(a.lat-latitude,a.lng-longitude);
+    customers.sort((a,b)=>dist(a,b)-dist(b,a));
+    alert('🧭 GPS 기준으로 순서가 정렬되었습니다.');
     renderCards();
-  },()=>alert('GPS 정보를 가져올 수 없습니다.'));
+  });
 }
 
-/** 출발 전송 → map.html
- *  전달 스키마: deliveriesJSON = [{ id,name,phone,address,lat,lng, order, boxes, waybills, products }]
- *  boxes = waybills.length
- */
-function dispatchToMap(){
-  const payload = customers.map(c=>({
-    id: c.id, name: c.name, phone: c.phone, address: c.address,
-    lat: c.lat, lng: c.lng, order: c.order||0,
-    boxes: c.waybills.length,
-    waybills: c.waybills,
-    products: c.products
-  }));
-  localStorage.setItem('deliveriesJSON', JSON.stringify(payload));
+/* ====== 출발 전송 (지도 연동) ====== */
+function dispatch(){
+  localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
   localStorage.setItem('startDispatch','1');
-  localStorage.setItem('totalDeliveries', String(payload.length));
-  alert('🚀 출발 전송 완료 → 지도 화면으로 이동합니다.');
+  localStorage.setItem('optimizeByGPS','1');
+  alert('🚀 출발 전송 완료! map.html로 이동합니다.');
   location.href='map.html';
 }
 
-/** 초기화(테스트용) **/
-function clearAll(){
-  if(!confirm('로컬 스캔/고객 데이터를 초기화할까요?')) return;
-  scanList=[]; customers=[];
-  localStorage.removeItem('scanList');
-  localStorage.removeItem('dep_customers');
-  renderScan(); renderCards();
-}
-
-/** 이벤트 & 초기 부트 **/
-document.getElementById('btnOptimize').onclick = optimize;
-document.getElementById('btnDispatch').onclick = dispatchToMap;
-document.getElementById('btnClear').onclick    = clearAll;
-
-(function init(){
-  renderScan();
-  if(!customers.length) seedIfEmpty();
-  renderCards();
-})();
+/* ====== 이벤트 연결 ====== */
+document.getElementById('btnOptimize').onclick=optimize;
+document.getElementById('btnDispatch').onclick=dispatch;
 </script>
 </body>
 </html>
