--- a/public/depart.html
+++ b/public/depart.html
@@ -6,146 +6,138 @@
 <title>배송출발 - The Listen</title>
 <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.20.0/umd/index.min.js"></script>
 <style>
-  :root{--brand:#007bff;--bg:#f7f9fc;--card:#fff;--muted:#6b7280;}
-  *{box-sizing:border-box}
-  body{margin:0;background:var(--bg);font-family:"Noto Sans KR",sans-serif}
-  header{background:var(--brand);color:#fff;text-align:center;padding:12px;font-weight:900}
-  .wrap{max-width:480px;margin:0 auto;padding:12px}
-  .card{background:var(--card);border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08);padding:14px;margin-bottom:12px}
-  .btn{display:inline-flex;align-items:center;justify-content:center;gap:6px;border:none;border-radius:10px;padding:12px 14px;
-       font-weight:800;color:#fff;background:var(--brand);cursor:pointer}
-  .btn.full{width:100%}.btn.gray{background:#6b7280}.btn.green{background:#10b981}.btn.orange{background:#f59e0b}
-  .stack{display:flex;gap:8px;flex-wrap:wrap}
-  input[type="text"]{flex:1;padding:12px;border:1px solid #e5e7eb;border-radius:10px;font-size:15px}
-  video{width:100%;border-radius:12px;background:#000}
-  .muted{color:var(--muted);font-size:.9rem;margin:6px 0}
-  .list{max-height:180px;overflow:auto;border:1px solid #eef2f7;border-radius:10px;padding:8px}
-  .cards{max-height:420px;overflow:auto;border:1px solid #eef2f7;border-radius:12px;padding:8px}
-  .citem{border:1px solid #e5e7eb;border-radius:12px;padding:10px;margin-bottom:8px}
-  .crow{display:flex;justify-content:space-between;gap:8px;align-items:center}
-  .order{min-width:36px;height:36px;border-radius:50%;background:#007bff;color:#fff;display:flex;align-items:center;
-         justify-content:center;font-weight:900}
-  .addr{font-size:.95rem}
+:root{--brand:#007bff;--gray:#6b7280;--green:#10b981;--orange:#f59e0b;--red:#ef4444;}
+body{margin:0;font-family:"Noto Sans KR",sans-serif;background:#f7f9fc}
+header{background:var(--brand);color:#fff;text-align:center;padding:12px;font-weight:900}
+.wrap{max-width:480px;margin:auto;padding:12px}
+.card{background:#fff;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08);padding:14px;margin-bottom:12px}
+.btn{flex:1;display:inline-flex;align-items:center;justify-content:center;gap:6px;
+  border:none;border-radius:10px;padding:12px 10px;font-weight:800;color:#fff;cursor:pointer}
+.btn.orange{background:var(--orange)}
+.btn.green{background:var(--green)}
+.btn.blue{background:var(--brand)}
+.cards{max-height:440px;overflow:auto;border:1px solid #eef2f7;border-radius:10px;padding:8px}
+.citem{border:1px solid #e5e7eb;border-radius:12px;padding:10px;margin-bottom:8px}
+.crow{display:flex;justify-content:space-between;align-items:center;gap:6px}
+.order{min-width:36px;height:36px;border-radius:50%;background:#007bff;color:#fff;
+  display:flex;align-items:center;justify-content:center;font-weight:900}
+.phone{color:#007bff;text-decoration:none;font-weight:700}
+.high{border:2px solid var(--red);background:#fff0f0}
+.kpi{display:flex;justify-content:space-between;margin-bottom:6px;font-weight:900}
+.footer{display:flex;gap:8px;margin-top:10px}
+.muted{color:#6b7280;font-size:.9rem;text-align:center}
 </style>
 </head>
 <body>
-<header>🚚 배송출발 (The Listen 운송장 분리형)</header>
+<header>🚚 배송출발 (The Listen)</header>
+
 <div class="wrap">
 
-  <!-- 스캔 / 수기 입력 -->
+  <!-- 상단 버튼 3개 대칭 -->
   <div class="card">
-    <video id="preview" playsinline muted></video>
-    <div class="stack">
-      <button class="btn" id="btnStart">📸 후면카메라</button>
-      <input id="scanInput" type="text" placeholder="운송장 입력 또는 스캐너 입력" />
-      <button class="btn green" id="btnAdd">추가</button>
+    <div class="footer">
+      <button class="btn orange" id="btnWaybill">📦 운송장 입력</button>
+      <button class="btn green" id="btnOptimize">🧭 최적 경로</button>
+      <button class="btn blue" id="btnDispatch">🚀 출발 전송</button>
     </div>
-    <div class="muted">후면 카메라 스캔 + HID(블루투스/유선) 입력 지원</div>
   </div>
 
-  <!-- 고객 카드 목록 -->
+  <!-- 고객 카드 -->
   <div class="card">
-    <div class="stack" style="margin-bottom:8px;">
-      <button class="btn orange full" id="btnOptimize">🧭 경로 최적화</button>
-      <button class="btn full" id="btnDispatch">🚀 출발 전송 → 지도</button>
-    </div>
-    <div class="cards" id="cards"></div>
+    <div class="kpi"><span>고객 카드(조남동)</span><span id="custCount">0</span></div>
+    <div id="cards" class="cards"></div>
+    <div class="muted">※ 고가품은 <span style="color:#ef4444;">빨간 테두리</span>로 표시됩니다.</div>
   </div>
+
 </div>
 
 <script>
-/* ====== 기본 변수 ====== */
-const reader=new ZXing.BrowserMultiFormatReader();
-const video=document.getElementById("preview");
 let customers=[];
 
-/* ====== 임시 테스트용 랜덤 고객 (주소 기반) ====== */
-function randomCustomer(code){
-  const baseLat=37.3795+(Math.random()-0.5)*0.01;
-  const baseLng=126.806+(Math.random()-0.5)*0.01;
-  const dong=100+Math.floor(Math.random()*20);
-  const ho=100+Math.floor(Math.random()*50);
-  return {
-    id:`${code}`,
-    name:`조남고객${dong}`,
-    phone:`010-33${dong}-${ho}22`,
-    address:`경기도 시흥시 조남동 ${dong}동 ${ho}호`,
-    lat:baseLat,lng:baseLng,
-    waybills:[code]
-  };
-}
-
-/* ====== 스캔 / 입력 ====== */
-document.getElementById('btnStart').onclick=()=>{
-  reader.decodeFromVideoDevice(null,video,(res,err)=>{
-    if(res){ addWaybill(res.text); }
-  });
-};
-document.getElementById('btnAdd').onclick=()=>{
-  const v=document.getElementById('scanInput').value.trim();
-  if(v){ addWaybill(v); document.getElementById('scanInput').value=''; }
-};
-document.getElementById('scanInput').addEventListener('keydown',e=>{
-  if(e.key==='Enter'){document.getElementById('btnAdd').click();}
-});
-
-/* ====== 운송장 추가 및 병합 ====== */
-function addWaybill(code){
-  // 새 고객 생성
-  const c=randomCustomer(code);
-
-  // 동일 고객(주소/전화/이름 매칭) 존재 확인
-  const exist=customers.find(x=>x.phone===c.phone && x.address===c.address && x.name===c.name);
-  if(exist){
-    if(!exist.waybills.includes(code)) exist.waybills.push(code);
-  }else{
-    customers.push(c);
+// 🧩 고객 50명 자동 생성 (고가품 10%)
+function seedCustomers(n=50){
+  const arr=[], baseLat=37.3795, baseLng=126.8060;
+  for(let i=1;i<=n;i++){
+    const lat=baseLat+(Math.random()-0.5)*0.01;
+    const lng=baseLng+(Math.random()-0.5)*0.01;
+    const dong=100+(i%20), ho=100+i;
+    const highValue=Math.random()<0.1; // 10% 고가품
+    arr.push({
+      id:`JONAM-${dong}-${ho}`,
+      name:`조남고객${i}`,
+      phone:`010-${String(1000+i).padStart(4,'0')}-${String(2000+i).padStart(4,'0')}`,
+      address:`경기도 시흥시 조남동 ${dong}동 ${ho}호`,
+      boxes:1+(i%3), highValue, lat,lng,order:null
+    });
   }
-  renderCards();
+  return arr;
 }
 
-/* ====== 카드 렌더링 ====== */
 function renderCards(){
-  const cards=document.getElementById('cards');
-  cards.innerHTML=customers.map((c,i)=>`
-    <div class="citem">
+  document.getElementById('custCount').textContent=customers.length;
+  document.getElementById('cards').innerHTML=customers.map(c=>`
+    <div class="citem ${c.highValue?'high':''}">
       <div class="crow">
-        <div class="order">${i+1}</div>
-        <div style="flex:1">
-          <div><b>${c.name}</b> · <span class="addr">${c.address}</span></div>
-          <div>📞 <a href="tel:${c.phone}" style="color:#007bff;text-decoration:none;">${c.phone}</a></div>
-          <div>📦 박스 ${c.waybills.length}개</div>
-          <div class="muted">운송장: ${c.waybills.join(', ')}</div>
+        <div class="order">${c.order??'-'}</div>
+        <div>
+          <div><b>${c.name}</b> ${c.highValue?'🔴':''}</div>
+          <div>${c.address}</div>
+          <div>📦 ${c.boxes}개 · <a href="tel:${c.phone}" class="phone">📞</a></div>
         </div>
       </div>
     </div>
   `).join('');
 }
 
-/* ====== GPS 기반 경로 최적화 ====== */
+// 🚦 경로 최적화
 function optimize(){
-  if(!navigator.geolocation) return alert('GPS 권한을 허용해주세요.');
+  if(!navigator.geolocation)return alert('GPS 권한 허용 필요');
   navigator.geolocation.getCurrentPosition(pos=>{
-    const {latitude,longitude}=pos.coords;
-    const dist=(a,b)=>Math.hypot(a.lat-latitude,a.lng-longitude);
-    customers.sort((a,b)=>dist(a,b)-dist(b,a));
-    alert('🧭 GPS 기준으로 순서가 정렬되었습니다.');
+    const [a,b]=[pos.coords.latitude,pos.coords.longitude];
+    const dist=(x1,y1)=>Math.hypot(x1-a,y1-b);
+    customers.sort((x,y)=>dist(x.lat,x.lng)-dist(y.lat,y.lng));
+    customers.forEach((c,i)=>c.order=i+1);
+    localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
+    localStorage.setItem('optimizeByGPS','1');
+    alert('🧭 GPS 기준으로 순번이 설정되었습니다.');
+    voiceGuide();
     renderCards();
   });
 }
 
-/* ====== 출발 전송 (지도 연동) ====== */
-function dispatch(){
-  localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
-  localStorage.setItem('startDispatch','1');
-  localStorage.setItem('optimizeByGPS','1');
-  alert('🚀 출발 전송 완료! map.html로 이동합니다.');
-  location.href='map.html';
+// 🗣️ 순번 음성 안내
+function voiceGuide(){
+  if('speechSynthesis' in window){
+    const msg=new SpeechSynthesisUtterance('배송 순서가 설정되었습니다. 1번 고객부터 시작하세요.');
+    msg.lang='ko-KR';
+    speechSynthesis.speak(msg);
+  }
 }
 
-/* ====== 이벤트 연결 ====== */
+// 🚀 출발 전송
+function dispatch(){
+  const notSent=customers.filter(c=>!c.sent);
+  const sent=JSON.parse(localStorage.getItem('sentCustomers')||'[]');
+  localStorage.setItem('sentCustomers',JSON.stringify(sent.concat(notSent)));
+  localStorage.setItem('deliveriesJSON',JSON.stringify(customers));
+  localStorage.setItem('startDispatch','1');
+  alert(`🚀 ${notSent.length}건 출발 전송 완료`);
+  location.href='map.html';
+  // depart/waybill 데이터 초기화
+  localStorage.removeItem('scanList');
+  localStorage.removeItem('waybillCustomers');
+}
+
+// 📦 운송장 페이지로 이동
+document.getElementById('btnWaybill').onclick=()=>location.href='waybill.html';
 document.getElementById('btnOptimize').onclick=optimize;
 document.getElementById('btnDispatch').onclick=dispatch;
+
+(function init(){
+  const saved=JSON.parse(localStorage.getItem('waybillCustomers')||'[]');
+  customers=saved.length?saved:seedCustomers(50);
+  renderCards();
+})();
 </script>
 </body>
 </html>
